fix overflow property

--- a/src/app/foot-bar/foot-bar.component.css
+++ b/src/app/foot-bar/foot-bar.component.css
@@ -1,5 +1,5 @@
 #footer {
     position: relative;
     clear: both;
-    overflow: visible;
+    overflow: auto;
 }
